compiler/testData/checkerWithErrorTypes/quick/backingField/CyclicReferenceInitializer.jet
class Cyclic() {
    val a = <!UNRESOLVED_REFERENCE, UNINITIALIZED_VARIABLE!>$a<!>
}
